samples/_failures_safe/1761414215_670c76_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5bff3e6f.c: In function ‘main’:
./samples/SAFE/__tmp_5bff3e6f.c:155:12: error: missing terminating " character
  155 |     printf("Enter
      |            ^~~~~~
./samples/SAFE/__tmp_5bff3e6f.c:155:5: error: expected expression at end of input
  155 |     printf("Enter
      |     ^~~~~~
./samples/SAFE/__tmp_5bff3e6f.c:155:5: error: expected declaration or statement at end of input
